<?xml version="1.0" encoding="utf-8"?>
<!--
      Layout for the creating chat dialog
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <!--Displays the fChat title on the box-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="28sp"
        android:gravity="center"/>

    <!--Subtitle with the "create chat" text-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/create_chat_text"
        android:gravity="center"/>

    <!--Text input for entering the chat's id-->
    <EditText
        android:id="@+id/chat_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textShortMessage"
        android:hint="@string/chat_id"
        android:layout_marginLeft="4dp"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"/>

    <!--Text input for entering the chat's title-->
    <EditText
        android:id="@+id/chat_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textShortMessage"
        android:hint="@string/chat_title"
        android:layout_marginLeft="4dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"/>


</LinearLayout>